--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^9.1.3",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
@@ -45,6 +46,7 @@
     "jest": "28.0.3",
     "prettier": "^2.3.2",
     "prisma": "^3.15.2",
+    "prisma-erd-generator": "^0.11.4",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.1",
