--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://00loja:password@localhost:5432/00loja?schema=public"
+JWT_SECRET = "B45@&3!#zDvVytrEwpO"
